--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body * {
 }
 
 .header-container {
-  height: 500vh;
+  height: 70vh;
   background-image: url(/images/pic.svg);
 }
 
@@ -18,6 +18,8 @@ body * {
   align-items: center;
   justify-content: space-around;
   gap: 50%;
+  padding-top: 3vh;
+
 }
 
 .item {
@@ -68,6 +70,33 @@ h1 {
   color: white;
   width: 160px;
   height: 43px;
-  border: transparent;
+  border: transparent solid 3px;
   background: #AD1AAF;
+  text-align: center;
+  border-radius: 0%;
+
+}
+
+.pBtnWallet {
+  padding-top: 15%;
+  font-size: 1.7vh;
+  font-family: "Oxanium";
+}
+
+.textForm {
+  padding-top: 20vh;
+  font-family: "Oxanium";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 100px;
+  line-height: 125px;
+}
+
+.paragraph {
+  padding-top: 05vh;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 25px;
+  line-height: 30px;
 }
